<resources>
    <string name="app_name">tic-tac-toe</string>
    <string name="first_page_title">Tic Tac Toe</string>
    <string name="play_btn">PLAY</string>
    <string name="player_setup_title">Enter Your Name</string>
    <string name="player1_label">Player1</string>
    <string name="player2_label">Player2</string>
    <string name="submit_name_btn">Let\'s Start!</string>
    <string name="NameHint">Enter Your Name</string>
    <string name="Play_again_btn">Play Again</string>
    <string name="Home_btn">Home</string>

</resources>