<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF1C2"
    tools:context=".playerSetup">

    <TextView
        android:id="@+id/playerpickertitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/player_setup_title"
        android:textSize="44sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="#DF004C"/>

    <TextView
        android:id="@+id/player1lable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player1_label"
        app:layout_constraintBottom_toTopOf="@+id/player1name"
        app:layout_constraintStart_toStartOf="@+id/player1name"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/player1name"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/NameHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerpickertitle"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/player2label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player2_label"
        app:layout_constraintBottom_toTopOf="@+id/player2name"
        app:layout_constraintStart_toStartOf="@+id/player2name"
        android:textSize="18sp"
        android:textColor="#DAA600"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/player2name"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/NameHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player1name"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/startgamebtn"
        android:layout_width="145dp"
        android:layout_height="50dp"
        android:layout_marginTop="96dp"
        android:background="@drawable/startgamebtn"
        android:text="@string/submit_name_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player2name"
        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="monospace"/>

</androidx.constraintlayout.widget.ConstraintLayout>